[package]
name = "ddquery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# general
anyhow = "1.0.71"
crossbeam-channel = "0.5.8"
tracing = "0.1.37"
# dataflow
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow" }
differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow" }
abomonation = "0.7"
abomonation_derive = "0.5.0"
# network
futures = "0.3.28"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
