[package]
name = "ddquery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
differential-dataflow = "0.13.1"
timely = "0.14.1"
crossbeam = "0.8.4"
serde = {version = "1.0.210", features = ["derive"]}

[dev-dependencies]
anyhow = { version = "1.0.92" , features = ["backtrace"]}
chrono = { version = "0.4.38", features = ["serde"]}
rayon = "1.10.0"
rust_decimal = "1.36.0"
paste = "1.0.15"